syntax = "proto3";

package auth;

option go_package = "todo.com/pb/auth";

// The greeting service definition.
service Auth {
  // Sends a greeting
  rpc SayHello (HelloRequest) returns (HelloReply) {}
}

// The request message containing the user's name.
message HelloRequest {
  string name = 1;
}

// The response message containing the greetings
message HelloReply {
  string message = 1;
}